--- a/index.html
+++ b/index.html
@@ -9,18 +9,29 @@
 </head>
 <body>
   <div class="container">
-    <h1>Hamburger Menu</h1>
-    <div class="hamburger__wrapper">
-      <div class="menu_1">
-        <span>Menu 1</span>
+      <h1>Hamburger Menu</h1>
+      <div class="hamburger__wrapper">
+        <div class="menu__1">
+          <h4>Menu 1</h4>
+          <div class="menu__btn__1">
+            <span></span>
+          </div>
+        </div>
+        <div class="menu__2">
+          <h4>Menu 2</h4>
+          <div class="menu__btn__2">
+            <span></span>
+          </div>
+        </div>
+        <div class="menu__3">
+          <div class="menu__btn__3">
+          <h4>Menu 3</h4>
+            <div class="line__1"></div>
+            <div class="line__2"></div>
+            <div class="line__3"></div>
+          </div>
+        </div>
       </div>
-      <div class="menu__2">
-        <span>Menu 2</span>
-      </div>
-      <div class="menu__3">
-        <div>Menu 3</div>
-      </div>
-    </div>
   </div>
 </body>
 <script src="js/script.js"></script>
