--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
                     <div class="line__3"></div>
                 </div>
             </div>
+            <div class="menu__4">
+                <h4>Menu 4</h4>
+                <div class="menu__btn__4">
+                    <div class="line__1"></div>
+                    <div class="line__2"></div>
+                    <div class="line__3"></div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
