--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
                     <div class="line__3"></div>
                 </div>
             </div>
+            <div class="menu__5">
+                <h4>Menu 5</h4>
+                <div class="menu__btn__5">
+                    <div class="line__1"></div>
+                    <div class="line__2"></div>
+                    <div class="line__3"></div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
