--- a/index.html
+++ b/index.html
@@ -49,9 +49,18 @@
                     <div class="line__3"></div>
                 </div>
             </div>
+            <div class="menu__6">
+                <h4>Menu 6</h4>
+                <div class="menu__btn__6">
+                    <input type="checkbox">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
         </div>
     </div>
 </body>
-<script src="js/script.js"></script>
+<script src=" js/script.js "></script>
 
 </html>
