--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <body>
     <div class="container">
-        <h1>Hamburger Menu</h1>
+        <div class="title">
+            <h1>Hamburger Menu</h1>
+            <img src="https://cdn.pixabay.com/photo/2020/05/30/19/28/ham-burger-5240132_960_720.png" alt="Hamburger">
+        </div>
         <div class="hamburger__wrapper">
             <div class="menu__1">
                 <h4>Menu 1</h4>
@@ -58,6 +61,9 @@
                     <span></span>
                 </div>
             </div>
+        </div>
+        <div class="work__example">
+            <a href="https://codesandbox.io/s/responsive-hamburger-menu-k32kw?file=/index.html" target="_blank" rel="noopener">Work Example - 1</a>
         </div>
     </div>
 </body>
