Fixing css style

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
             <img src="https://cdn.pixabay.com/photo/2020/05/30/19/28/ham-burger-5240132_960_720.png" alt="Hamburger">
         </div>
         <div class="hamburger__wrapper">
-            <div class="menu__1">
+            <div class="menu__1" id="menu">
                 <h4>Menu 1</h4>
                 <div class="menu__btn__1">
                     <span></span>
                 </div>
             </div>
-            <div class="menu__2">
+            <div class="menu__2" id="menu">
                 <h4>Menu 2</h4>
                 <div class="menu__btn__2">
                     <span></span>
                 </div>
             </div>
-            <div class="menu__3">
+            <div class="menu__3" id="menu">
                 <h4>Menu 3</h4>
                 <div class="menu__btn__3">
                     <div class="line__1"></div>
@@ -36,7 +36,7 @@
                     <div class="line__3"></div>
                 </div>
             </div>
-            <div class="menu__4">
+            <div class="menu__4" id="menu">
                 <h4>Menu 4</h4>
                 <div class="menu__btn__4">
                     <div class="line__1"></div>
@@ -44,7 +44,7 @@
                     <div class="line__3"></div>
                 </div>
             </div>
-            <div class="menu__5">
+            <div class="menu__5" id="menu">
                 <h4>Menu 5</h4>
                 <div class="menu__btn__5">
                     <div class="line__1"></div>
@@ -52,7 +52,7 @@
                     <div class="line__3"></div>
                 </div>
             </div>
-            <div class="menu__6">
+            <div class="menu__6" id="menu">
                 <h4>Menu 6</h4>
                 <div class="menu__btn__6">
                     <input type="checkbox">
