--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         </div>
         <div class="work__example">
             <a href="https://codesandbox.io/s/responsive-hamburger-menu-k32kw?file=/index.html" target="_blank" rel="noopener">Work Example - 1</a>
+            <a href="https://codesandbox.io/s/rouge-pickings-4p5ys?file=/index.html" target="_blank" rel="noopener">Work Example - 2</a>
         </div>
     </div>
 </body>
