Modify link url, and add image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="title">
             <h1>Hamburger Menu</h1>
-            <img src="https://cdn.pixabay.com/photo/2020/05/30/19/28/ham-burger-5240132_960_720.png" alt="Hamburger">
+            <img src="img/hamburger.png" alt="Hamburger">
         </div>
         <div class="hamburger__wrapper">
             <div class="menu__1" id="menu">
@@ -64,7 +64,7 @@
         </div>
         <div class="work__example">
             <a href="https://codesandbox.io/s/responsive-hamburger-menu-k32kw?file=/index.html" target="_blank" rel="noopener">Work Example - 1</a>
-            <a href="https://codesandbox.io/s/rouge-pickings-4p5ys?file=/index.html" target="_blank" rel="noopener">Work Example - 2</a>
+            <a href="https://driyant.github.io/206-rouge-pickings" target="_blank" rel="noopener">Work Example - 2</a>
         </div>
     </div>
 </body>
